<resources>
    <string name="app_name">Example Project</string>
    <string name="home_label">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">CLose navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ad">Ad</string>
    <string name="soyad">Soyad</string>
    <string name="kaydet">Kaydet</string>
    <string name="dogum_tarihi">Doğum tarihi</string>
    <string name="anasayfa">Anasayfa</string>
    <string name="form_ekranı">Form Ekranı</string>
    <string name="form_listesi">Form Listesi</string>
    <string name="fotograf_sec">Fotoğraf seç</string>
    <string name="cinsiyet">Cinsiyet :</string>
    <string name="profil_fotografi">Profil Fotoğrafı :</string>
    <string name="telefon_numarasi">Telefon Numarası :</string>
    <string name="portfoy_hesabi">Portföy Hesabı</string>
    <string name="yatirim_hesabi">Yatırım Hesabı</string>
    <string name="vadesiz_hesap">Vadesiz Hesap</string>
    <string name="vadeli_hesap">Vadeli Hesap</string>
    <string name="hesap_tipi">Hesap Tipi :</string>
    <string name="secilen_hesap_bilgileri">Seçilen Hesap Bilgileri</string>
    <string name="devam_et">devam et</string>
</resources>