<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragmentForm">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit16dp"
            android:layout_marginTop="@dimen/unit16dp"
            android:layout_marginEnd="@dimen/unit16dp"
            android:hint="@string/ad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit16dp"
            android:layout_marginTop="@dimen/unit8dp"
            android:layout_marginEnd="@dimen/unit16dp"
            android:hint="@string/soyad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <ImageView
            android:id="@+id/imageViewCalendar"
            android:layout_width="@dimen/unit32dp"
            android:layout_height="@dimen/unit32dp"
            android:layout_marginStart="@dimen/unit8dp"
            android:layout_marginTop="@dimen/unit8dp"
            android:layout_marginEnd="@dimen/unit32dp"
            android:src="@drawable/ic_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextDate"
            app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit16dp"
            android:layout_marginTop="@dimen/unit8dp"
            android:layout_marginEnd="@dimen/unit64dp"
            android:hint="@string/dogum_tarihi"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate">

        </ImageView>

        <Button
            android:id="@+id/buttonProfilePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="100dp"
            android:text="@string/fotograf_sec"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate">

        </Button>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="@dimen/unit16dp"
            android:layout_marginBottom="@dimen/unit16dp"
            android:text="@string/kaydet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewProfile"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>